<resources>
    <string name="app_name">justJavajava</string>
    <string name="quantity">quantity</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="price">order summary</string>
    <string name="order">order</string>
    <string name="toppings">toppings</string>
    <string name="whipped_cream">Whipped cream</string>
</resources>
