<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:textSize="24sp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/plain_text_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/TextView_toppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/plain_text_input" />

    <CheckBox
        android:id="@+id/checkbox_whipped_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/TextView_toppings"
        android:paddingLeft="24dp"
        android:text="Whipped Cream"
        />

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="Chocolate"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/checkbox_whipped_cream"/>




    <TextView
        android:id="@+id/TextView_Quantity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="quantity"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:paddingTop="16dp"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/chocolate_checkbox" />


    <Button
        android:id="@+id/increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:onClick="increment"
        android:text="@string/plus"
        android:textSize="48sp"
        app:layout_constraintLeft_toRightOf="@+id/quantity_text_view"
        app:layout_constraintTop_toTopOf="@+id/decrement" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintRight_toLeftOf="@+id/increment"
        app:layout_constraintLeft_toRightOf="@+id/decrement"
        app:layout_constraintTop_toTopOf="@+id/increment"
        app:layout_constraintBottom_toBottomOf="@+id/increment"

/>

    <Button
        android:id="@+id/decrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="decrement"
        android:text="@string/minus"
        android:textSize="48sp"
        android:layout_marginRight="20dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/quantity_text_view"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Quantity_title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/price"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/decrement"
        app:layout_constraintTop_toBottomOf="@id/decrement" />

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/_0"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@id/textView2" />


    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/order"
        app:layout_constraintLeft_toLeftOf="@id/order_summary_text_view"
        app:layout_constraintTop_toBottomOf="@id/order_summary_text_view" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>